--- a/src/App.css
+++ b/src/App.css
@@ -162,14 +162,16 @@
                 cursor: pointer;
             }
             
-            .content .header ul li {
+            .content .header ul li .a {
+                padding-left: 0;
+                color: black;
                 font-size: 15px;
                 font-weight: 500;
                 line-height: 21.86px;
                 margin: 0px 10px;
             }
             
-            .content .header ul li:hover {
+            .content .header ul li .a:hover {
                 color: #001ec5
             }
             
